Updating css to fix home tab and spill stats
Home tab has been updated for the new images and paragraph about Michigan Oil Spill.
Spill Charts tab has been formatted to center the images for a better viewing experience on all screen sizes.

--- a/static/css/spillcharts.css
+++ b/static/css/spillcharts.css
@@ -1,21 +1,25 @@
 #percentages-table {
     width: 1050px;
-    padding-left: 15em;
+    margin-left: auto;
+    margin-right: auto
 }
 
 #contamination-table {
     width: 1050px;
-    padding-left: 15em;
+    margin-left: auto;
+    margin-right: auto
 }
 
 #boxplot-img {
     height: 800px;
     width: 800px;
-    padding-left: 18em;
+    margin-left: auto;
+    margin-right: auto
 }
 
 #boxplot-year {
     height: 800px;
     width: 800px;
-    padding-left: 18em;
+    margin-left: auto;
+    margin-right: auto
 }
